# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import contactRouter from "./contact";
 import adminRouter from "./admin";
 import blogsRouter from "./blogs";
 import publicBlogsRouter from "./public-blogs";
+import testimonialsRouter from "./testimonials";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(contactRouter);
 router.use(adminRouter);
 router.use(blogsRouter);
 router.use(publicBlogsRouter);
+router.use(testimonialsRouter);
 
 export default router;
